refactor: getTextFields returns default fields if exception occurs